set index new_df

--- a/production_analysis.ipynb
+++ b/production_analysis.ipynb
@@ -741,6 +741,230 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1985.0</th>\n",
+       "      <td>745.9880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1986.0</th>\n",
+       "      <td>752.5187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1987.0</th>\n",
+       "      <td>788.8833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1988.0</th>\n",
+       "      <td>836.5963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1989.0</th>\n",
+       "      <td>862.7420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990.0</th>\n",
+       "      <td>879.7612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1991.0</th>\n",
+       "      <td>901.3422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1992.0</th>\n",
+       "      <td>901.4509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993.0</th>\n",
+       "      <td>932.1479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1994.0</th>\n",
+       "      <td>951.0607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1995.0</th>\n",
+       "      <td>984.7304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996.0</th>\n",
+       "      <td>1012.5890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997.0</th>\n",
+       "      <td>1010.8343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998.0</th>\n",
+       "      <td>1038.5289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1999.0</th>\n",
+       "      <td>1070.2907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000.0</th>\n",
+       "      <td>1101.4815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001.0</th>\n",
+       "      <td>1097.5295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002.0</th>\n",
+       "      <td>1129.2849</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2003.0</th>\n",
+       "      <td>1148.4013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004.0</th>\n",
+       "      <td>1165.4307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005.0</th>\n",
+       "      <td>1190.4989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006.0</th>\n",
+       "      <td>1186.4787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007.0</th>\n",
+       "      <td>1223.8100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2008.0</th>\n",
+       "      <td>1219.9679</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009.0</th>\n",
+       "      <td>1185.9574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010.0</th>\n",
+       "      <td>1231.1626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011.0</th>\n",
+       "      <td>1227.4857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012.0</th>\n",
+       "      <td>1199.9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013.0</th>\n",
+       "      <td>1228.0482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014.0</th>\n",
+       "      <td>1244.7934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015.0</th>\n",
+       "      <td>1236.6349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016.0</th>\n",
+       "      <td>1233.1725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017.0</th>\n",
+       "      <td>1223.3381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018.0</th>\n",
+       "      <td>129.4048</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              sum\n",
+       "year             \n",
+       "1985.0   745.9880\n",
+       "1986.0   752.5187\n",
+       "1987.0   788.8833\n",
+       "1988.0   836.5963\n",
+       "1989.0   862.7420\n",
+       "1990.0   879.7612\n",
+       "1991.0   901.3422\n",
+       "1992.0   901.4509\n",
+       "1993.0   932.1479\n",
+       "1994.0   951.0607\n",
+       "1995.0   984.7304\n",
+       "1996.0  1012.5890\n",
+       "1997.0  1010.8343\n",
+       "1998.0  1038.5289\n",
+       "1999.0  1070.2907\n",
+       "2000.0  1101.4815\n",
+       "2001.0  1097.5295\n",
+       "2002.0  1129.2849\n",
+       "2003.0  1148.4013\n",
+       "2004.0  1165.4307\n",
+       "2005.0  1190.4989\n",
+       "2006.0  1186.4787\n",
+       "2007.0  1223.8100\n",
+       "2008.0  1219.9679\n",
+       "2009.0  1185.9574\n",
+       "2010.0  1231.1626\n",
+       "2011.0  1227.4857\n",
+       "2012.0  1199.9999\n",
+       "2013.0  1228.0482\n",
+       "2014.0  1244.7934\n",
+       "2015.0  1236.6349\n",
+       "2016.0  1233.1725\n",
+       "2017.0  1223.3381\n",
+       "2018.0   129.4048"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yearly_df.set_index('year', inplace = True)\n",
+    "\n",
+    "yearly_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
