--- a/production_analysis.ipynb
+++ b/production_analysis.ipynb
@@ -1066,6 +1066,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    397.000000\n",
+       "mean      88.847218\n",
+       "std       15.387834\n",
+       "min       55.315100\n",
+       "25%       77.105200\n",
+       "50%       89.779500\n",
+       "75%      100.524400\n",
+       "max      129.404800\n",
+       "Name: Consumption, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Consumption'].describe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1093,10 +1121,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import the modulle \n",
+    "from statsmodels.tsa.stattools import adfuller"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define a function to perfom the test and return the results \n",
+    "def adf_test(df):\n",
+    "    result = adfuller(df, autolag='AIC')\n",
+    "    print('ADF Statistic:', result[0])\n",
+    "    print('p-value:', result[1])\n",
+    "    print('Critical Values:', result[4])\n",
+    "\n",
+    "    if result[1] <= 0.05:\n",
+    "        print(\"Reject the null hypothesis. The time series is stationary.\")\n",
+    "    else:\n",
+    "        print(\"Fail to reject the null hypothesis. The time series is non-stationary.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF Statistic: -2.256990350047254\n",
+      "p-value: 0.18621469116586464\n",
+      "Critical Values: {'1%': -3.4476305904172904, '5%': -2.869155980820355, '10%': -2.570827146203181}\n",
+      "Fail to reject the null hypothesis. The time series is non-stationary.\n"
+     ]
+    }
+   ],
+   "source": [
+    "adf_test(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the p-value is greater than 0.05, \n",
+    "we automatically conclude that the time series is non stationary and therefore \n",
+    "we will need to make it stationary before applying any time series modelling on it "
+   ]
   },
   {
    "cell_type": "code",
